--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/react-native": "~0.64.12",
     "patch-package": "^6.4.7"
   },
   "private": true
